--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.6'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.hbb20:ccp:2.5.0'
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.google.firebase:firebase-bom:30.2.0'
     implementation 'com.karumi:dexter:6.2.3'
