--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 
 dependencies {
 
+    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
+
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
